styles/style.css
/* ... */
.search-widget__search-bar--results-showing-header {
    border-radius: 1em 1em 0 0;
}

.search-widget__search-bar--header {
    width: 45em;
    max-width: 100%;
    height: 3em;
    padding: 0.5em;
    transition: width 0.75s, border 0.75s, padding 0.75s, visibility 0.75s;
}

.search-widget__search-bar--hidden {
    width: 3em;
    border: 2px solid #cfcfcf00;
    visibility: hidden;
}

.search-widget__search-bar-input {
    -webkit-appearance: textfield;
    width: 100%;
    border: none;
    padding: 0;
    background: none;
}

.search-widget__search-bar-input--nav-menu {
    font-size: 1em;
    color: #363636;
}

.search-widget__search-bar-input--header {
    font-size: 1.25em;
    color: #fff;
}

.search-widget__search-bar-input:focus {
    outline: none;
}

.search-widget__search-bar-input::placeholder {
    color: inherit;
}

.search-widget__search-bar-input::-webkit-search-cancel-button {
    display: none;
}

.search-widget__exit-btn {
    flex: 0 0 auto;
    margin: 0;
    box-sizing: border-box;
    width: 1.25em;
    height: 1.25em;
    border: none;
    padding: 0.15em;
    background: none;
}

.search-widget__exit-btn--hidden {
    display: none;
}

.search-widget__exit-btn-icon {
    width: 100%;
    height: 100%;
    fill: #363636;
}

.search-widget__result-list {
    box-sizing: border-box;
    width: 100%;
    padding: 1em;
}

.search-widget__result-list--header {
    position: absolute;
    left: 0;
    top: 100%;
    max-height: 50vh;
    border: 3px solid #363636;
    border-top: none;
    border-radius: 0 0 10px 10px;
    background: #fff;
    box-shadow: 0 7px 20px 0px #4a4a4a;
    overflow: auto;
    z-index: 2;
}

.search-widget__result-list--hidden {
    display: none;
}

.search-widget__result-link {
    display: block;
    margin-bottom: 0.5em;
    font-size: 1.15em;
    color: inherit;
    text-decoration: underline;
}

.search-widget__result-metadata-container {
    margin-bottom: 0.5em;
}

.search-widget__metadata-entry--header {
    margin-right: 1em;
}

.search-widget__metadata-entry--nav-menu {
    display: block;
    margin-bottom: 0.5em;
}

.search-widget__result-content {
    margin: 0 0 0.5em 0;
}

.search-widget__result-highlight {
    color: #15404E;
    font-weight: bold;
}

.search-widget__result-separator {
    margin: 1em 0;
    width: 100%;
    height: 2px;
    background: #000;
}

/* section-text */
.section-text {
    position: relative;
}

@media (min-width:900px) {
    .section-text {
        position: absolute;
        right: 0;
        top: 50%;
        transform: translate(0, -50%);
        width: 38%;
        max-height: 94%;
        display: flex;
        flex-direction: column;
        transition: transform 1s ease 1s;
    }
}

.section-text--shelved {
    transform: translate(100%, -50%);
    transition: transform 1s ease 0s;
}

.section-text--hidden {
    display: none;
}

.section-text__unshelve-btn-container {
    position: absolute;
    left: 0;
    top: 0;
    transform: translateX(-100%);
    display: flex;
    align-items: center;
    padding: 0.2em 0.75em 0.2em 0;
    background: #363636;
    z-index: 0;
    transition: transform 1s ease 1s, visibility 0s ease 1s;
}

@media (max-width: 900px) {
    .section-text__unshelve-btn-container {
        display: none;
    }
}

.section-text__unshelve-btn-container--hidden {
    transform: translateX(0%);
    visibility: hidden;
    transition: transform 1s ease 0s, visibility 1s ease 0s;
}

.section-text__unshelve-btn {
    padding: 0.45em 1em 0.45em 0.45em;
    border: none;
    font-size: 1.35em;
    font-weight: 600;
    white-space: nowrap;
    color: #fff;
    background: none;
}

.section-text__stop-narration-btn {
    box-sizing: border-box;
    width: 2.25em;
    height: 2.25em;
    border-radius: 100px;
    border: none;
    box-shadow: 0px 0px 0 2px #fff;
    padding: 0.4em;
    background: none;
}

.section-text__stop-narration-btn--hidden {
    display: none;
}

.section-text__stop-narration-btn-icon {
    fill: #fff;
}

.section-text__main-container {
    min-height: calc(100vh - 112px);
    display: flex;
    flex-direction: column;
    padding: 16px 0;
    font-size: 1rem;
    background: #363636;
}

@media (min-width:900px) {
    .section-text__main-container {
        min-height: 0;
        flex: 1;
        padding: 0;
        transition: visibility 0s ease 0s;
    }

    .section-text__main-container--hidden {
        visibility: hidden;
        transition: visibility 0s ease 1s;
    }

    .section-text__main-container--no-learn-more {
        padding-bottom: 1em;
    }
}

.section-text__text-container {
    display: flex;
    flex-direction: column;
    overflow: auto;
    padding: 0 1em;
    padding: 0 max(1em, env(safe-area-inset-right)) 0 max(1em, env(safe-area-inset-left));
    color: #fff;
    background: inherit;
}

@media (min-width:900px) {
    .section-text__text-container {
        padding: 1rem 0 0;
    }
}

.section-text__header-container {
    display: flex;
    align-items: center;
    flex: 1 0 auto;
    margin-right: 4.5rem;
    padding-top: 0.4em;
    font-size: 1.35em;
}

@media (min-width:900px) {
    .section-text__header-container {
        padding: 0.4rem 0 0 1rem;
    }
}

.section-text__shelve-btn {
    padding: 0;
    border: none;
    color: inherit;
    background: inherit;
    font-weight: 600;
    white-space: nowrap;
}

@media (max-width: 900px) {
    .section-text__shelve-btn {
        display: none;
    }
}

.section-text__header-divider {
    margin: 0 1em;
    width: .1em;
    height: 1.25em;
    background: #fff;
}

@media (max-width: 900px) {
    .section-text__header-divider {
        display: none;
    }
}

.section-text__toggle-narration-btn {
    position: absolute;
    top: 1.14em;
    right: 1em;
    box-sizing: border-box;
    width: 2.75em;
    height: 2.75em;
    border-radius: 100px;
    border: 2px solid #0000;
    padding: 0.4em;
    background: none;
    transition: border 0.25s;
}
/* ... */

